Documentation: fix search cut off

--- a/coral-guide/styles/guide.css
+++ b/coral-guide/styles/guide.css
@@ -131,6 +131,7 @@ body.is-ready {
   left: 256px;
   right: 0;
   width: auto;
+  overflow: visible;
 }
 
 .layout-container > header > a {
